<resources>
    <string name="app_name">Workout_Log</string>
    <string name="Email_required">Email is required</string>
    <string name="Password_required">Password is required</string>
    <string name="input_password">Input Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Enter Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_in">Log In</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="not_a_member">Not a member?</string>
    <string name="plan">plan</string>
    <string name="profile">profile</string>
    <string name="track">track</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="track_fragment">Track Fragment</string>
    <string name="Plan_fragment">Plan Fragment</string>
    <string name="Profile_fragment">Profile Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="already_a_member">Already a member?</string>
    <string name="plan_fragment">Plan Fragment</string>
    <string name="enter_phonenumber">enter_phoneNumber</string>
    <string name="save">save</string>

</resources>